# RTB-Allezon-data-processor

./: .gitignore  Cargo.toml  areospike.bat  docker-compose.yaml  docker-playbook.yaml  init_machines  restart.sh
db/: aerospike.conf  features.conf  surrealdb_init.surql
src/: api.rs  compression.rs  database.rs  main.rs  storage.rs  tests.rs  types.rs  utils.rs
src/data/: aggregate_event_tag.rs  common.rs  compressed_tag.rs  compression.rs  external_user_tag.rs  mod.rs  time.rs  user_event_tag.rs  user_profile.rs  user_tag.rs
src/database/: aerospike.rs  cache.rs  compression_cache.rs  local.rs  mod.rs  postgres.rs  surrealdb.rs  traits.rs
src/endpoints/: add_user_tags.rs  aggregates.rs  mod.rs  user_profiles.rs  utils.rs
