[package]
name = "rtbpoject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.5"
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.10", features = ["full"] }
rayon = "1.10"
serde-querystring = "0.2"
serde-querystring-actix = "0.2"
futures = "0.3"
aerospike = "1.3"
surrealdb = { version = "1.4", features = ["protocol-http"] }
anyhow = "1.0"
