[package]
name = "rtbpoject"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.5"
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.10", features = ["full"] }
rayon = "1.10"
serde-querystring = "0.2"
serde-querystring-actix = "0.2"
futures = "0.3"
aerospike = "1.3"
surrealdb = { version = "1.4", features = ["protocol-http"] }
anyhow = "1.0"
strum = "0.26"
strum_macros = "0.26"
env_logger = "0.11"
log = "0.4"
